--- a/src/sample/admin/update.fxml
+++ b/src/sample/admin/update.fxml
@@ -1,8 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="627.0" prefWidth="968.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.admin.UpdateController">
-
+<AnchorPane prefHeight="627.0" prefWidth="1072.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.admin.UpdateController">
+   <children>
+      <Text layoutX="240.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update User">
+         <font>
+            <Font size="33.0" />
+         </font>
+      </Text>
+      <TableView fx:id="table_of_users" layoutX="14.0" layoutY="88.0" prefHeight="384.0" prefWidth="633.0">
+         <columns>
+            <TableColumn fx:id="user_id" prefWidth="87.0" style="-fx-alignment: CENTER;" text="User ID" />
+            <TableColumn fx:id="user_image" prefWidth="199.0" style="-fx-alignment: CENTER;" text="Image" />
+            <TableColumn fx:id="user_name" minWidth="0.0" prefWidth="204.0" style="-fx-alignment: CENTER;" text="User Name" />
+            <TableColumn fx:id="user_role" prefWidth="141.0" style="-fx-alignment: CENTER;" text="Role" />
+         </columns>
+      </TableView>
+      <Text layoutX="147.0" layoutY="508.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter ID of the user you want to edit:" textAlignment="CENTER" wrappingWidth="304.24658203125">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font>
+      </Text>
+      <TextField layoutX="179.0" layoutY="522.0" prefHeight="33.0" prefWidth="241.0" />
+      <Button layoutX="267.0" layoutY="568.0" mnemonicParsing="false" text="Edit User" />
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="805.0" layoutY="208.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="update_image_id" fitHeight="150.0" fitWidth="200.0" layoutX="783.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true" />
+      <Text layoutX="684.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Name:" />
+      <TextField fx:id="update_user_name" layoutX="763.0" layoutY="262.0" prefHeight="25.0" prefWidth="284.0" />
+      <Text layoutX="684.0" layoutY="327.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" />
+      <TextField fx:id="update_password" layoutX="763.0" layoutY="310.0" prefHeight="25.0" prefWidth="284.0" />
+      <Text layoutX="684.0" layoutY="371.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Role:" />
+      <ChoiceBox fx:id="update_role" layoutX="763.0" layoutY="354.0" prefHeight="25.0" prefWidth="284.0" />
+      <Button layoutX="767.0" layoutY="431.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="284.0" text="Update User" />
+   </children>
 </AnchorPane>
