--- a/src/sample/viewer/car_details_list_for_search.fxml
+++ b/src/sample/viewer/car_details_list_for_search.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="627.0" prefWidth="1114.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.viewer.ViewCarController">
+<AnchorPane prefHeight="627.0" prefWidth="1114.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.viewer.CarDetailsListForSearch">
     <children>
         <Text layoutX="442.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="View All Cars">
             <font>
